<resources>
    <string name="app_name">GDocs</string>
    <string name="home">Home</string>
    <string name="platform">Platform</string>
    <string name="favorite">Favorite</string>
    <string name="game_image">Game Image</string>
    <string name="tv_toolbar">Movie Detail</string>
    <string name="synopsis">Synopsis</string>
    <string name="exam_metascore">80</string>
    <string name="genre">Genre</string>
    <string name="developer">Developer</string>
    <string name="publisher">Publisher</string>
    <string name="imageview_desc">imageview_desc</string>
    <string name="detail_platform_title_page">%s Detail Platform</string>
    <string name="title_favorite">Favorite</string>
    <string name="favorited">Favorited</string>
    <string name="game_not_found">Game Not Found</string>
    <string name="task_add_success">Game has been successfully added to favorites list</string>
    <string name="task_delete_success">Game has been successfully deleted to favorites list</string>
</resources>