<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.made.gdocs.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/navigation_platform"
        android:name="com.made.gdocs.platform.PlatformFragment"
        android:label="@string/platform"
        tools:layout="@layout/fragment_platform"
        />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.made.gdocs.favorite.ui.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite"
        />

</navigation>